Fixed java version issues